# v

./: 404.html  index.html  pyproject.toml  sitemap.xml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
RELEASE/: index.html
contributing/ARCHITECTURE/: index.html
contributing/CONTRIBUTING/: index.html
contributing/DOWNLOAD_QUEUE/: index.html
contributing/INVOCATIONS/: index.html
contributing/LOCAL_DEVELOPMENT/: index.html
contributing/MODEL_MANAGER/: index.html
contributing/TESTS/: index.html
contributing/contribution_guides/development/: index.html
contributing/contribution_guides/documentation/: index.html
contributing/contribution_guides/newContributorChecklist/: index.html
contributing/contribution_guides/translation/: index.html
contributing/contribution_guides/tutorials/: index.html
deprecated/2to3/: index.html
deprecated/CLI/: index.html
deprecated/EMBIGGEN/: index.html
deprecated/INPAINTING/: index.html
deprecated/OUTPAINTING/: index.html
deprecated/TRANSLATION/: index.html
deprecated/VARIATIONS/: index.html
features/: index.html
features/CONFIGURATION/: index.html
features/CONTROLNET/: index.html
features/DATABASE/: index.html
features/IMG2IMG/: index.html
features/LOGGING/: index.html
features/LORAS/: index.html
features/MODEL_MERGING/: index.html
features/OTHER/: index.html
features/POSTPROCESS/: index.html
features/PROMPTS/: index.html
features/TEXTUAL_INVERSIONS/: index.html
features/TRAINING/: index.html
features/UNIFIED_CANVAS/: index.html
features/UTILITIES/: index.html
features/WATERMARK+NSFW/: index.html
features/WEB/: index.html
features/WEBUIHOTKEYS/: index.html
help/FAQ/: index.html
help/SAMPLER_CONVERGENCE/: index.html
help/deprecated/TROUBLESHOOT/: index.html
help/diffusion/: index.html
help/gettingStartedWithAI/: index.html
installation/010_INSTALL_AUTOMATED/: index.html
installation/020_INSTALL_MANUAL/: index.html
installation/030_INSTALL_CUDA_AND_ROCM/: index.html
installation/040_INSTALL_DOCKER/: index.html
installation/050_INSTALLING_MODELS/: index.html
installation/060_INSTALL_PATCHMATCH/: index.html
installation/070_INSTALL_XFORMERS/: index.html
installation/Developers_documentation/BUILDING_BINARY_INSTALLERS/: index.html
installation/INSTALLATION/: index.html
installation/deprecated_documentation/INSTALL_BINARY/: index.html
installation/deprecated_documentation/INSTALL_JUPYTER/: index.html
installation/deprecated_documentation/INSTALL_LINUX/: index.html
installation/deprecated_documentation/INSTALL_MAC/: index.html
installation/deprecated_documentation/INSTALL_PCP/: index.html
installation/deprecated_documentation/INSTALL_SOURCE/: index.html
installation/deprecated_documentation/INSTALL_WINDOWS/: index.html
invokeai/app/: api_app.py
invokeai/app/api/: dependencies.py  sockets.py
invokeai/app/api/routers/: model_manager.py
invokeai/app/invocations/: facetools.py  fields.py  image.py  latent.py
invokeai/app/invocations/custom_nodes/: init.py
invokeai/app/services/config/: config_base.py
invokeai/app/services/download/: download_default.py
invokeai/app/services/events/: events_base.py  events_common.py
invokeai/app/services/invocation_stats/: invocation_stats_default.py
invokeai/app/services/model_install/: model_install_base.py  model_install_default.py
invokeai/app/services/session_processor/: session_processor_default.py
invokeai/app/services/session_queue/: session_queue_sqlite.py
invokeai/app/services/shared/: invocation_context.py
invokeai/app/services/shared/sqlite/: sqlite_database.py
invokeai/app/services/shared/sqlite_migrator/: sqlite_migrator_impl.py
invokeai/app/services/shared/sqlite_migrator/migrations/: migration_2.py
invokeai/app/util/: profiler.py
invokeai/backend/image_util/: lama.py  patchmatch.py  safety_checker.py  txt2mask.py
invokeai/backend/install/: install_helper.py  invokeai_configure.py
invokeai/backend/model_manager/load/model_loaders/: stable_diffusion.py
invokeai/backend/stable_diffusion/diffusion/: shared_invokeai_diffusion.py
invokeai/backend/training/: textual_inversion_training.py
invokeai/backend/util/: hotfixes.py  logging.py  util.py
invokeai/frontend/install/: model_install.py
invokeai/frontend/merge/: merge_diffusers.py
invokeai/frontend/training/: textual_inversion.py
invokeai/frontend/web/public/locales/: en.json
invokeai/frontend/web/src/app/store/middleware/listenerMiddleware/listeners/socketio/: socketModelInstall.ts  socketModelLoad.ts  socketQueueItemStatusChanged.ts
invokeai/frontend/web/src/services/api/: schema.ts  types.ts
invokeai/frontend/web/src/services/api/endpoints/: models.ts
invokeai/frontend/web/src/services/events/: actions.ts  types.ts
invokeai/frontend/web/src/services/events/util/: setEventListeners.ts
nodes/INVOCATION_API/: index.html
nodes/NODES/: index.html
nodes/NODES_MIGRATION_V3_V4/: index.html
nodes/comfyToInvoke/: index.html
nodes/communityNodes/: index.html
nodes/contributingNodes/: index.html
nodes/defaultNodes/: index.html
nodes/detailedNodes/faceTools/: index.html
nodes/exampleWorkflows/: index.html
nodes/overview/: index.html
other/CONTRIBUTORS/: index.html
other/README-CompViz/: index.html
search/: search_index.json
tests/app/services/model_install/: test_model_install.py
tests/backend/util/: test_logging.py
