[build-system]
requires = ["setuptools~=65.5", "pip~=22.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eskav"
description = "An implementation of Stable Diffusion which provides various new features and options to aid the image generation process"
requires-python = ">=3.10, <3.12"
readme = { content-type = "text/markdown", file = "README.md" }
keywords = ["stable-diffusion", "AI"]
dynamic = ["version"]
license = { file = "LICENSE" }
authors = [{ name = "The eskav Project", email = "lincoln.stein@gmail.com" }]
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: GPU',
  'Environment :: GPU :: NVIDIA CUDA',
  'Environment :: MacOS X',
  'Intended Audience :: End Users/Desktop',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: POSIX :: Linux',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Topic :: Artistic Software',
  'Topic :: Internet :: WWW/HTTP :: WSGI :: Application',
  'Topic :: Internet :: WWW/HTTP :: WSGI :: Server',
  'Topic :: Multimedia :: Graphics',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Image Processing',
]
dependencies = [
  # Core generation dependencies, pinned for reproducible builds.
  "accelerate==0.27.2",
  "clip_anytorch==2.5.2",       # replacing "clip @ https://github.com/openai/CLIP/archive/eaa22acb90a5876642d0507623e859909230a52d.zip",
  "compel==2.0.2",
  "controlnet-aux==0.0.7",
  "diffusers[torch]==0.26.3",
  "invisible-watermark==0.2.0", # needed to install SDXL base and refiner using their repo_ids
  "mediapipe==0.10.7",          # needed for "mediapipeface" controlnet model
  "numpy==1.26.4",              # >1.24.0 is needed to use the 'strict' argument to np.testing.assert_array_equal()
  "onnx==1.15.0",
  "onnxruntime==1.16.3",
  "opencv-python==4.9.0.80",
  "pytorch-lightning==2.1.3",
  "safetensors==0.4.2",
  "timm==0.6.13",               # needed to override timm latest in controlnet_aux, see  https://github.com/isl-org/ZoeDepth/issues/26
  "torch==2.1.2",
  "torchmetrics==0.11.4",
  "torchsde==0.2.6",
  "torchvision==0.16.2",
  "transformers==4.38.2",

  # Core application dependencies, pinned for reproducible builds.
  "fastapi-events==0.10.1",
  "fastapi==0.109.2",
  "huggingface-hub==0.21.3",
  "pydantic-settings==2.1.0",
  "pydantic==2.6.1",
  "python-socketio==5.11.1",
  "uvicorn[standard]==0.27.1",

  # Auxiliary dependencies, pinned only if necessary.
  "albumentations",
  "blake3",
  "click",
  "datasets",
  "Deprecated",
  "dnspython~=2.4.0",
  "dynamicprompts",
  "easing-functions",
  "einops",
  "facexlib",
  "matplotlib",                            # needed for plotting of Penner easing functions
  "npyscreen",
  "omegaconf",
  "picklescan",
  "pillow",
  "prompt-toolkit",
  "pympler~=1.0.1",
  "pypatchmatch",
  'pyperclip',
  "pyreadline3",
  "python-multipart",
  "requests~=2.28.2",
  "rich~=13.3",
  "scikit-image~=0.21.0",
  "semver~=3.0.1",
  "send2trash",
  "test-tube~=0.7.5",
  "windows-curses; sys_platform=='win32'",
]

[project.optional-dependencies]
"xformers" = [
  # Core generation dependencies, pinned for reproducible builds.
  "xformers==0.0.23.post1; sys_platform!='darwin'",
  # Auxiliary dependencies, pinned only if necessary.
  "triton; sys_platform=='linux'",
]
"onnx" = ["onnxruntime"]
"onnx-cuda" = ["onnxruntime-gpu"]
"onnx-directml" = ["onnxruntime-directml"]
"dist" = ["pip-tools", "pipdeptree", "twine"]
"docs" = [
  "mkdocs-material",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-redirects",
  "mkdocstrings[python]",
]
"dev" = ["jurigged", "pudb", "snakeviz", "gprof2dot"]
"test" = [
  "ruff",
  "ruff-lsp",
  "mypy",
  "pre-commit",
  "pytest>6.0.0",
  "pytest-cov",
  "pytest-timeout",
  "pytest-datadir",
  "requests_testadapter",
  "httpx",
]

[project.scripts]

# legacy entrypoints; provided for backwards compatibility
"configure_eskav.py" = "eskav.frontend.install.eskav_configure:eskav_configure"
"textual_inversion.py" = "eskav.frontend.training:eskav_textual_inversion"

# shortcut commands to start web ui
# "eskav --web" will launch the web interface
# "eskav" = "eskav.frontend.legacy_launch_eskav:main"

# new shortcut to launch web interface
"eskav-web" = "eskav.app.api_app:invoke_api"

# full commands
"eskav-configure" = "eskav.frontend.install.eskav_configure:eskav_configure"
"eskav-merge" = "eskav.frontend.merge.merge_diffusers:main"
"eskav-ti" = "eskav.frontend.training:eskav_textual_inversion"
"eskav-model-install" = "eskav.frontend.install.model_install:main"
"eskav-model-install2" = "eskav.frontend.install.model_install2:main"              # will eventually be renamed to eskav-model-install
"eskav-migrate3" = "eskav.backend.install.migrate_to_3:main"
"eskav-update" = "eskav.frontend.install.eskav_update:main"
"eskav-metadata" = "eskav.backend.image_util.invoke_metadata:main"
"eskav-node-web" = "eskav.app.api_app:invoke_api"
"eskav-import-images" = "eskav.frontend.install.import_images:main"
"eskav-db-maintenance" = "eskav.backend.util.db_maintenance:main"

[project.urls]
"Homepage" = "https://invoke-ai.github.io/eskav/"
"Documentation" = "https://invoke-ai.github.io/eskav/"
"Source" = "https://github.com/invoke-ai/eskav/"
"Bug Reports" = "https://github.com/invoke-ai/eskav/issues"
"Discord" = "https://discord.gg/ZmtBAhwWhy"

[tool.setuptools.dynamic]
version = { attr = "eskav.version.__version__" }

[tool.setuptools.packages.find]
"where" = ["."]
"include" = [
  "eskav.assets.fonts*",
  "eskav.version*",
  "eskav.generator*",
  "eskav.backend*",
  "eskav.frontend*",
  "eskav.frontend.web.dist*",
  "eskav.frontend.web.static*",
  "eskav.configs*",
  "eskav.app*",
  "eskav.invocation_api*",
]

[tool.setuptools.package-data]
"eskav.app.assets" = ["**/*.png"]
"eskav.app.services.workflow_records.default_workflows" = ["*.json"]
"eskav.assets.fonts" = ["**/*.ttf"]
"eskav.backend" = ["**.png"]
"eskav.configs" = ["*.example", "**/*.yaml", "*.txt"]
"eskav.frontend.web.dist" = ["**"]
"eskav.frontend.web.static" = ["**"]
"eskav.app.invocations" = ["**"]

#=== Begin: PyTest and Coverage
[tool.pytest.ini_options]
addopts = "--cov-report term --cov-report html --cov-report xml --strict-markers -m \"not slow\""
markers = [
  "slow: Marks tests as slow. Disabled by default. To run all tests, use -m \"\". To run only slow tests, use -m \"slow\".",
  "timeout: Marks the timeout override."
]
[tool.coverage.run]
branch = true
source = ["eskav"]
omit = ["*tests*", "*migrations*", ".venv/*", "*.env"]
[tool.coverage.report]
show_missing = true
fail_under = 85     # let's set something sensible on Day 1 ...
[tool.coverage.json]
output = "coverage/coverage.json"
pretty_print = true
[tool.coverage.html]
directory = "coverage/html"
[tool.coverage.xml]
output = "coverage/index.xml"
#=== End: PyTest and Coverage

#=== Begin: Ruff
[tool.ruff]
line-length = 120
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "eskav/frontend/web/node_modules/",
  ".venv*",
]

[tool.ruff.lint]
ignore = [
  "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
  "C901", # https://docs.astral.sh/ruff/rules/complex-structure/
  "B008", # https://docs.astral.sh/ruff/rules/function-call-in-default-argument/
  "B904", # https://docs.astral.sh/ruff/rules/raise-without-from-inside-except/
]
select = ["B", "C", "E", "F", "W", "I"]
#=== End: Ruff

#=== Begin: MyPy

# global mypy config
[tool.mypy]
ignore_missing_imports = true # ignores missing types in third-party libraries
strict = true
plugins = "pydantic.mypy"
exclude = ["tests/*"]

# overrides for specific modules
[[tool.mypy.overrides]]
follow_imports = "skip" # skips type checking of the modules listed below
module = [
  "eskav.app.api.routers.models",
  "eskav.app.invocations.compel",
  "eskav.app.invocations.latent",
  "eskav.app.services.invocation_stats.invocation_stats_default",
  "eskav.app.services.model_manager.model_manager_base",
  "eskav.app.services.model_manager.model_manager_default",
  "eskav.app.services.model_manager.store.model_records_sql",
  "eskav.app.util.controlnet_utils",
  "eskav.backend.image_util.txt2mask",
  "eskav.backend.image_util.safety_checker",
  "eskav.backend.image_util.patchmatch",
  "eskav.backend.image_util.invisible_watermark",
  "eskav.backend.install.model_install_backend",
  "eskav.backend.ip_adapter.ip_adapter",
  "eskav.backend.ip_adapter.resampler",
  "eskav.backend.ip_adapter.unet_patcher",
  "eskav.backend.model_management.convert_ckpt_to_diffusers",
  "eskav.backend.model_management.lora",
  "eskav.backend.model_management.model_cache",
  "eskav.backend.model_management.model_manager",
  "eskav.backend.model_management.model_merge",
  "eskav.backend.model_management.model_probe",
  "eskav.backend.model_management.model_search",
  "eskav.backend.model_management.models.*",                            # this is needed to ignore the module's `__init__.py`
  "eskav.backend.model_management.models.base",
  "eskav.backend.model_management.models.controlnet",
  "eskav.backend.model_management.models.ip_adapter",
  "eskav.backend.model_management.models.lora",
  "eskav.backend.model_management.models.sdxl",
  "eskav.backend.model_management.models.stable_diffusion",
  "eskav.backend.model_management.models.vae",
  "eskav.backend.model_management.seamless",
  "eskav.backend.model_management.util",
  "eskav.backend.stable_diffusion.diffusers_pipeline",
  "eskav.backend.stable_diffusion.diffusion.cross_attention_control",
  "eskav.backend.stable_diffusion.diffusion.shared_eskav_diffusion",
  "eskav.backend.util.hotfixes",
  "eskav.backend.util.mps_fixes",
  "eskav.backend.util.util",
  "eskav.frontend.install.model_install",
]
#=== End: MyPy

[tool.pyright]
# Start from strict mode
typeCheckingMode = "strict"
# This errors whenever an import is missing a type stub file - way too noisy
reportMissingTypeStubs = "none"
# These are the rest of the rules enabled by strict mode - enable them @ warning
reportConstantRedefinition = "warning"
reportDeprecated = "warning"
reportDuplicateImport = "warning"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "warning"
reportInvalidStubStatement = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnusedClass = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUntypedBaseClass = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedNamedTuple = "warning"
